# Prism-

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-09-prism-implementation.md
docs/superpowers/specs/: 2026-04-09-prism-design.md
prism/: cli.py  db.py  display.py  embeddings.py  encoder.py  explorer.py  models.py  resonance.py  seed.py
tests/: test_cli.py  test_db.py  test_display.py  test_embeddings.py  test_encoder.py  test_explorer.py  test_integration.py  test_models.py  test_resonance.py  test_seed.py
